@@ -1,3 +1,7 @@
+Sun Aug 21 17:05:24 EEST 2011 (edwin)
+-------------------------------------
+ * libclamav/pdf.c:  fix incorrect blocking of some encrypted PDF with empty user passwords. (bb #3364)
+
 Mon Aug  8 11:32:31 CEST 2011 (tk)
 ----------------------------------
  * freshclam: add new option --update-db
